# a

./: README.md  STOCK_ANALYZER_TW_PLAN.md  pyproject.toml  requirements.txt
docs/: roadmap.md
src/backtest/: simple_backtest.py
src/data/: download_price.py
src/features/: build_features.py
src/models/: train_model.py
src/todo_mvp/: __init__.py  cli.py  todo.py
tests/: test_todo.py
