[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-mvp"
version = "0.1.0"
description = "A minimal executable Todo CLI project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
todo-mvp = "todo_mvp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
